Added Model Adjust attributes and corresponding API references to weightOpt.html

--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -165,66 +165,108 @@
                             <table class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
-                                        <th class="text-center">Phase</th>
-                                        <th class="text-center">Price ($/lb)</th>
-                                        <th class="text-center">Start Weight (lbs)</th>
+                                        <th>Phase</th>
+                                        <th>Price ($/lb)</th>
+                                        <th>Start Weight (lbs)</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <th>N1</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.29438071" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" id="N1_wt" name="feed_wt" value="12" disabled/></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.29438071" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" id="N1-wt" name="feed_wt" value="12" disabled/></td>
                                     </tr>
                                     <tr>
                                         <th>N2</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.18980649" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="20" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.18980649" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="20" /></td>
                                     </tr>
                                     <tr>
                                         <th>N3</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.11205248" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="30" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.11205248" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="30" /></td>
                                     </tr>
                                     <tr>
                                         <th>F1</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.09077630" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="50" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.09077630" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="50" /></td>
                                     </tr>
                                     <tr>
                                         <th>F2</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.08552250" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="80" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.08552250" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="80" /></td>
                                     </tr>
                                     <tr>
                                         <th>F3</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.07965624" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="120" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.07965624" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="120" /></td>
                                     </tr>
                                     <tr>
                                         <th>F4</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.07812813" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="160" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.07812813" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="160" /></td>
                                     </tr>
                                     <tr>
                                         <th>F5</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.07665118" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="200" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.07665118" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="200" /></td>
                                     </tr>
                                     <tr>
                                         <th>F6</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.07570529" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="225" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.07570529" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="225" /></td>
                                     </tr>
                                     <tr>
                                         <th>F7</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.09360718" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="245" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.09360718" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="245" /></td>
                                     </tr>
                                     <tr>
                                         <th>F8</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-price" name="feed_pr" value="0.09719425" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-wt" name="feed_wt" value="265" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-pr" name="feed_pr" value="0.09719425" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-feed-wt" name="feed_wt" value="265" /></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </form>
+
+            <form class="form-horizontal" id="frmModelAdj">
+                <div class="panel panel-default" style="margin-top:5px;">
+                    <div class="panel-heading" role="tab" id="headingFour">
+                        <h4 class="panel-title">
+                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                Model Adjust Attributes
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="collapseFour" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingFour">
+                        <div class="panel-body">
+                            <table class="table table-bordered table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>Model Attributes</th>
+                                        <th>Gain Model</th>
+                                        <th>FC Model</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>Model Target</th>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="273" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="12" /></td>
+                                    </tr>
+                                    <tr>
+                                        <th>Start Week</th>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="0" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="0" /></td>
+                                    </tr>
+                                    <tr>
+                                        <th>End Week</th>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="24.5" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="24.5" /></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -475,6 +517,50 @@
         });
     });
 
+    $(document).ready(function () {
+        $("#frmModelAdj").formValidation({
+            framework: "bootstrap",
+            err: {
+                container: "tooltip"
+            },
+            row: {
+                selector: 'td'
+            },
+            fields: {
+                model_g_adj: {
+                    validators: {
+                        notEmpty: {
+                            message: "Gain Model attribute is required"
+                        },
+                        numeric: {
+                            message: "Gain Model attribute must be a number",
+                            decimalSeparator: "."
+                        },
+                        greaterThan: {
+                            value: 0,
+                            message: "Gain Model attribute must be greater than %s"
+                        }
+                    }
+                },
+                model_fc_adj: {
+                    validators: {
+                        notEmpty: {
+                            message: "FC Model attribute is required"
+                        },
+                        numeric: {
+                            message: "FC Model attribute must be a number",
+                            decimalSeparator: "."
+                        },
+                        greaterThan: {
+                            value: 0,
+                            message: "FC Model attribute must be greater than %s"
+                        }
+                    }
+                }
+            }
+        });
+    });
+
     $("#frmWeightOpt input").blur(function () {
         $(this).parent().parent().parent().removeClass("has-success");
     });
@@ -483,8 +569,12 @@
         $(this).parent().removeClass("has-success");
     });
 
+    $("#frmModelAdjust input").blur(function () {
+        $(this).parent().removeClass("has-success");
+    });
+
     $("#inpStartWt").change(function () {
-        $("#N1_wt").val($("#inpStartWt").val());
+        $("#N1-wt").val($("#inpStartWt").val());
     });
 
     $("#recalculate").click(function () {
@@ -493,8 +583,9 @@
 
     function generatePlot() {
         var url = "http://wsf-web-app.azurewebsites.net/api/v1/weightOptApi";
-        url = url + "?" + $("#frmWeightOpt").serialize() + "&" + $("#frmFeed").serialize();
-        
+        url = url + "?" + $("#frmWeightOpt").serialize() + "&" + $("#frmFeed").serialize() + "&" + $("#frmModelAdj").serialize();
+        console.log($("#frmModelAdj").serialize());
+        console.log(url);
         $.getJSON(url).done(function (data) {
             var d3 = Plotly.d3;
 
