--- a/FlaskWebProject/static/content/site.css
+++ b/FlaskWebProject/static/content/site.css
@@ -36,16 +36,27 @@ textarea {
     vertical-align: middle;
 }
 
-#frmFeed .has-feedback .form-control {
+#frmFeed .has-feedback .form-control,
+#frmModelAdjust .has-feedback .form-control {
     padding-right: 12px;
     margin: 0 auto;
 }
 
-.inp-price {
+.inp-feed-pr {
     width: 105px;
     text-align: center;
 }
 
-.inp-wt {
+.inp-feed-wt {
+    text-align: center;
+}
+
+.inp-model-g {
+    width: 70px;
+    text-align: center;
+}
+
+.inp-model-fc {
+    width: 70px;
     text-align: center;
 }
