styling quick adjustments to weightOpt.html

--- a/FlaskWebProject/static/content/site.css
+++ b/FlaskWebProject/static/content/site.css
@@ -51,12 +51,12 @@ textarea {
     text-align: center;
 }
 
-.inp-model-g {
+.inp-model-g-adj {
     width: 70px;
     text-align: center;
 }
 
-.inp-model-fc {
+.inp-model-fc-adj {
     width: 70px;
     text-align: center;
 }
