--- a/FlaskWebProject/templates/weightOpt.html
+++ b/FlaskWebProject/templates/weightOpt.html
@@ -255,18 +255,18 @@
                                 <tbody>
                                     <tr>
                                         <th>Model Target</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="273" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="2.65" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g-adj" name="model_g_adj" value="273" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc-adj" name="model_fc_adj" value="2.65" /></td>
                                     </tr>
                                     <tr>
                                         <th>Start Week</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="0" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="0" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g-adj" name="model_g_adj" value="0" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc-adj" name="model_fc_adj" value="0" /></td>
                                     </tr>
                                     <tr>
                                         <th>End Week</th>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g" name="model_g_adj" value="24.5" /></td>
-                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc" name="model_fc_adj" value="24.5" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-g-adj" name="model_g_adj" value="24.5" /></td>
+                                        <td class="has-feedback"><input type="text" class="form-control inp-model-fc-adj" name="model_fc_adj" value="24.5" /></td>
                                     </tr>
                                 </tbody>
                             </table>
