--- a/FlaskWebProject/templates/layout.html
+++ b/FlaskWebProject/templates/layout.html
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="/static/content/bootstrap-3.3.6.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/content/formValidation-0.7.1.min.css" />
-    <link rel="stylesheet" type="text/css" href="/static/content/site.css" />
+    <link rel="stylesheet" type="text/css" href="/static/content/mysite.css" />
 
     <script src="/static/scripts/jquery-2.2.1.min.js"></script>
     <script src="/static/scripts/bootstrap-3.3.6.min.js"></script>
