--- a/FlaskWebProject/templates/layout.html
+++ b/FlaskWebProject/templates/layout.html
@@ -30,6 +30,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('weightOpt') }}">Weight Analysis</a></li>
+                    <li><a href="{{ url_for('reportCard') }}">Report Card</a></li>
                 </ul>
             </div>
         </div>
