--- a/FlaskWebProject/static/content/mysite.css
+++ b/FlaskWebProject/static/content/mysite.css
@@ -31,13 +31,15 @@ textarea {
 }
 
 .table > tbody > tr > th,
-.table > thead > tr > th {
+.table > thead > tr > th,
+.table > tbody > tr > td {
     text-align: center;
     vertical-align: middle;
 }
 
 #frmFeed .has-feedback .form-control,
-#frmModelAdj .has-feedback .form-control {
+#frmModelAdj .has-feedback .form-control,
+#frmReportCard .has-feedback .form-control {
     padding-right: 12px;
     margin: 0 auto;
 }
@@ -60,3 +62,7 @@ textarea {
     width: 70px;
     text-align: center;
 }
+
+/*.inp-rc {
+    padding-right: 12px;
+}*/
